# ascent-log

./: .gitignore  README.md  docker-compose.yml
backend/: .dockerignore  Dockerfile  alembic.ini  auth_utils.py  database.py  main.py  models.py  pyproject.toml  requirements.txt
backend/migrations/: env.py
backend/migrations/versions/: 7a261f5f8a09_update_users_table.py  dcab14697b5a_initial_create_users_and_applications.py
backend/routers/: applications.py  auth.py  users.py
frontend/: package-lock.json  package.json
frontend/src/: App.tsx  index.css  types.ts
frontend/src/components/: ApplicationCard.tsx  ApplicationModal.tsx  KanbanBoard.tsx  KanbanColumn.tsx  Layout.tsx  Logo.tsx
frontend/src/context/: AuthContext.tsx
frontend/src/hooks/: useApplications.ts
frontend/src/pages/: Login.tsx  Register.tsx
